Update Listar Publicações Diárias.ipynb

--- a/Imersão 5/Desafio Web Scraping - Turma 1/Listar Publicações Diárias.ipynb
+++ b/Imersão 5/Desafio Web Scraping - Turma 1/Listar Publicações Diárias.ipynb
@@ -12,7 +12,10 @@
     "import re\n",
     "from bs4 import BeautifulSoup\n",
     "from selenium import webdriver\n",
-    "from selenium.webdriver.chrome.options import Options"
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC"
    ]
   },
   {
@@ -40,6 +43,13 @@
     "\n",
     "    driver.get(url_base)\n",
     "               \n",
+    "# Aguardar até que o botão seja clicável\n",
+    "    wait = WebDriverWait(driver, 5)\n",
+    "              \n"              
+    "    botao = wait.until(EC.visibility_of_element_located((By.ID, 'viewMenuOptionTree')))\n"
+    "              \n"
+    "    botao.click()\n"
+    "     \n"
     "    html_content = driver.page_source\n",
     "\n",
     "    driver.quit()\n",
